objects/Service_Part__c.object
<CustomObject>
    <description>Custom object to allow global action on a Service automating insertion of Product Consumed or Products Required</description>
    <fields>
        <fullName>Auto_Request_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Auto Request Part to the Consumed Part</description>
        <label>Auto Request Part</label>
        <referenceTo>Request_Part__c</referenceTo>
        <relationshipLabel>Service Parts Request</relationshipLabel>
        <relationshipName>Service_Parts_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Item from Van Stock</description>
        <label>Product Item</label>
        <referenceTo>ProductItem</referenceTo>
        <relationshipLabel>Service_Parts</relationshipLabel>
        <relationshipName>Service_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product_Item__r.Product2.Name</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Consumed__c</fullName>
        <label>Quantity Consumed</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <referenceTo>CKSW_BASE__Service__c</referenceTo>
        <relationshipLabel>Service Parts</relationshipLabel>
        <relationshipName>Service_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Service Parts (Service Work Order)</relationshipLabel>
        <relationshipName>Service_Parts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Service_Parts</relationshipLabel>
        <relationshipName>Service_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Part</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SPN-{000000}</displayFormat>
        <label>Service Part Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service_Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Qty_Larger_than_0</fullName>
        <active>true</active>
        <description>Must be greater than zero</description>
        <errorConditionFormula>Quantity_Consumed__c &lt; 1</errorConditionFormula>
        <errorDisplayField>Quantity_Consumed__c</errorDisplayField>
        <errorMessage>Quantity Consumed must one or more</errorMessage>
    </validationRules>
</CustomObject>